# SyntaxParser

./: CMakeLists.txt  Compiler.cpp  LR1Generator.cpp  SyntaxParser.cpp  main.cpp
demo/: syntaxInput.txt
include/: AnalyseTableGenerator.h  Automata.h  GrammarResourcePool.h  Item.h  ItemCollection.h  ItemCollectionManager.h  LR1Generator.h  Production.h  Symbol.h  SymbolTable.h  SyntaxParser.h  SyntaxTree.h
src/: AnalyseTableGenerator.cpp  Automata.cpp  GrammarResourcePool.cpp  Item.cpp  ItemCollection.cpp  ItemCollectionManager.cpp  LR1Generator.cpp  Production.cpp  Symbol.cpp  SymbolTable.cpp  SyntaxParser.cpp  SyntaxTree.cpp
